# Lease.Api

./: CMakeLists.txt
docs/: Architecture.md
mock/: CMakeLists.txt
mock/PiSubmarine/Lease/Api/: ILeaseIssuerMock.h  ILeaseSecretProviderMock.h  ILeaseValidatorMock.h  IResourceRegistryMock.h
public/PiSubmarine/Lease/Api/: ErrorCode.h  ILeaseIssuer.h  ILeaseSecretProvider.h  ILeaseValidator.h  IResourceRegistry.h  Identifiers.h  Lease.h  LeaseGrant.h  LeasePolicy.h  LeaseRequest.h  LeaseSecret.h  LeaseValidation.h  ResourceDescriptor.h
public/PiSubmarine/Session/Api/: ActivationDescriptor.h  ILeaseIssuer.h  ILeaseValidator.h  IResourceRegistry.h  Identifiers.h  Lease.h  LeasePolicy.h  LeaseRequest.h  LeaseValidation.h  ResourceDescriptor.h
src/: CMakeLists.txt
src/PiSubmarine/Lease/Api/: ErrorCode.cpp
test/: CMakeLists.txt
test/PiSubmarine/Lease/Api/: LeaseApiMockTest.cpp  LeaseApiTest.cpp
test/PiSubmarine/Session/Api/: SessionApiTest.cpp
